# staticlib_http

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/html/: HttpClientException_8hpp.html  HttpClientException_8hpp_source.html  HttpRequestOptions_8hpp.html  HttpRequestOptions_8hpp_source.html  HttpResourceInfo_8hpp.html  HttpResourceInfo_8hpp_source.html  HttpResource_8hpp.html  HttpResource_8hpp_source.html  HttpSessionOptions_8hpp.html  HttpSessionOptions_8hpp_source.html  HttpSession_8hpp.html  HttpSession_8hpp_source.html  annotated.html  classes.html  classstaticlib_1_1http_1_1http__exception-members.html  classstaticlib_1_1http_1_1http__exception.html  classstaticlib_1_1http_1_1multi__threaded__session-members.html  classstaticlib_1_1http_1_1multi__threaded__session.html  classstaticlib_1_1http_1_1resource-members.html  classstaticlib_1_1http_1_1resource.html  classstaticlib_1_1http_1_1session-members.html  classstaticlib_1_1http_1_1session.html  classstaticlib_1_1http_1_1single__threaded__session-members.html  classstaticlib_1_1http_1_1single__threaded__session.html  classstaticlib_1_1httpclient_1_1HttpClientException-members.html  classstaticlib_1_1httpclient_1_1HttpClientException.html  classstaticlib_1_1httpclient_1_1HttpResource-members.html  classstaticlib_1_1httpclient_1_1HttpResource.html  classstaticlib_1_1httpclient_1_1HttpSession-members.html  classstaticlib_1_1httpclient_1_1HttpSession.html  classstaticlib_1_1httpclient_1_1http__resource-members.html  classstaticlib_1_1httpclient_1_1http__resource.html  classstaticlib_1_1httpclient_1_1http__session-members.html  classstaticlib_1_1httpclient_1_1http__session.html  classstaticlib_1_1httpclient_1_1httpclient__exception-members.html  classstaticlib_1_1httpclient_1_1httpclient__exception.html  dir_1acfa576498e5d64944dd1f6963391fe.html  dir_c33d3ca81783b96de1fd366e75cb14d0.html  dir_f4bf19b08ce7790d46fc017fb4ba41c9.html  files.html  (+60 more)
docs/html/search/: all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_67.js  all_68.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  classes_68.js  classes_6d.js  classes_72.js  classes_73.js  files_68.js  files_6d.js  files_72.js  files_73.js  functions_61.js  functions_63.js  functions_67.js  functions_68.js  functions_6d.js  functions_6f.js  functions_72.js  functions_73.js  namespaces_73.js  related_68.js  search.js  variables_61.js  variables_62.js  variables_63.js  variables_65.js  variables_66.js  variables_68.js  (+8 more)
include/staticlib/: http.hpp  httpclient.hpp
include/staticlib/http/: http_exception.hpp  multi_threaded_session.hpp  polling_session.hpp  request_options.hpp  resource.hpp  resource_info.hpp  session.hpp  session_options.hpp  single_threaded_session.hpp
include/staticlib/httpclient/: HttpClientException.hpp  HttpRequestOptions.hpp  HttpResource.hpp  HttpResourceInfo.hpp  HttpResourceMetadata.hpp  HttpSession.hpp  HttpSessionOptions.hpp  basic_http_session.hpp  (+8 more)
src/: HttpResource.cpp  HttpSession.cpp  all_requests_paused_latch.hpp  basic_http_session.cpp  basic_http_session_impl.hpp  curl_deleters.hpp  curl_headers.hpp  curl_info.hpp  curl_options.hpp  curl_utils.hpp  http_resource.cpp  http_resource_impl.hpp  http_resource_params.hpp  http_session.cpp  multi_threaded_http_resource.cpp  multi_threaded_http_resource.hpp  multi_threaded_http_session.cpp  multi_threaded_resource.cpp  multi_threaded_resource.hpp  multi_threaded_session.cpp  polling_resource.cpp  polling_resource.hpp  polling_session.cpp  request_ticket.hpp  request_tickets_queue.hpp  resource.cpp  resource_impl.hpp  resource_params.hpp  response_data_queue.hpp  response_headers_queue.hpp  running_request.hpp  running_request_pipe.hpp  session.cpp  session_impl.hpp  single_threaded_http_resource.cpp  single_threaded_http_resource.hpp  single_threaded_http_session.cpp  single_threaded_resource.cpp  single_threaded_resource.hpp  single_threaded_session.cpp
test/: CMakeLists.txt  HttpResource_test.cpp  HttpSession_test.cpp  http_resource_test.cpp  http_session_test.cpp  polling_test.cpp  resource_test.cpp  session_test.cpp
